--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">极客班</string>
     <string name="splash_text">极客班启动页面</string>
     <string name="click_to_enter">点击进入</string>
+    <string name="hello_world_text">Hello World!Hello World!Hello World!Hello World!Hello World!Hello World!Hello World!</string>
 </resources>
